--- a/index.html
+++ b/index.html
@@ -8,7 +8,76 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section></section>
+  <section>
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="testimonialBox">
+            <img src="quote.png" class="quote">
+            <div class="content">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Nisi porro, iste at repellendus eius rem nostrum soluta 
+                illo fugit quis?</p>
+                <div class="details">
+                  <div class="imgBx">
+                      <img src="user1.png">
+                  </div>
+                  <h3>Someone Famous<br><span>Creative Designer</span></h3>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="testimonialBox">
+            <img src="quote.png" class="quote">
+            <div class="content">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Nisi porro, iste at repellendus eius rem nostrum soluta 
+                illo fugit quis?</p>
+                <div class="details">
+                  <div class="imgBx">
+                      <img src="user2.png">
+                  </div>
+                  <h3>Someone Famous<br><span>Creative Designer</span></h3>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="testimonialBox">
+            <img src="quote.png" class="quote">
+            <div class="content">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Nisi porro, iste at repellendus eius rem nostrum soluta 
+                illo fugit quis?</p>
+                <div class="details">
+                  <div class="imgBx">
+                      <img src="user3.png">
+                  </div>
+                  <h3>Someone Famous<br><span>Creative Designer</span></h3>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      effect: 'coverflow',
+      grabCursor: true,
+      centeredSlides: true,
+      slidesPerView: 'auto',
+      coverflowEffect: {
+        rotate: 0,
+        stretch: 0,
+        depth: 100,
+        modifier: 2,
+        slideShadows: true,
+      },
+      loop: true,
+    });
+  </script>
 </body>
 </html>
